# youtube-summarizer

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  sample.env
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py
cli/llms/: gemini.py  llm.py  utils.py
cli/utils/prompts/: prompt_factory.py  prompt_generators.py
cli/youtube/: youtube_manager.py
src/: __init__.py  __main__.py
src/llms/: gemini.py  llm.py  utils.py
src/utils/: input_parser.py
src/utils/prompts/: prompt_factory.py
src/youtube/: utils.py  youtube_manager.py
tests/: test_llm.py  test_main.py  test_prompt_factory.py  test_youtube_manager.py  test_youtube_utils.py
ytsum/: __init__.py  __main__.py  config.py
ytsum/Output/Daily LeetCode Challenge (Day 354) Find Lucky Integer in an Array/: summary.md  text.md
ytsum/llms/: gemini.py  llm.py  utils.py
ytsum/utils/: input_parser.py  logging_config.py
ytsum/utils/prompts/: prompt_factory.py  prompt_generators.py
ytsum/youtube/: utils.py  youtube_manager.py
